--- a/home.html
+++ b/home.html
@@ -13,8 +13,99 @@
             Blog
         </h1>
     </header>
+    <section class="title">
+        <h1>
+            User Posts
+            <hr class="horizontal-line">
+        </h1>
+    </section>
     <section class="cards">
-
+        <div class="card">
+            <a href="https://codingfantasy.com/games/flexboxadventure/play">
+                <img src="post.svg" alt="ilustração" class="image1">
+                <h2>
+                    card title
+                </h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
+                </p>
+                <button class="expand">
+                    Expand...
+                </button>
+            </a>
+        </div>
+        <div class="card">
+            <a href="https://codingfantasy.com/games/flexboxadventure/play">
+                <img src="post.svg" alt="ilustração" class="image1">
+                <h2>
+                    card title
+                </h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
+                </p>
+                <button class="expand">
+                    Expand...
+                </button>
+            </a>
+        </div>
+        <div class="card">
+            <a href="https://codingfantasy.com/games/flexboxadventure/play">
+                <img src="post.svg" alt="ilustração" class="image1">
+                <h2>
+                    card title
+                </h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
+                </p>
+                <button class="expand">
+                    Expand...
+                </button>
+            </a>
+        </div>
+    </section>
+    <section class="cards">
+        <div class="card">
+            <a href="https://codingfantasy.com/games/flexboxadventure/play">
+                <img src="post.svg" alt="ilustração" class="image1">
+                <h1>
+                    card title
+                </h1>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
+                </p>
+                <button class="expand">
+                    Expand...
+                </button>
+            </a>
+        </div>
+        <div class="card">
+            <a href="https://codingfantasy.com/games/flexboxadventure/play">
+                <img src="post.svg" alt="ilustração" class="image1">
+                <h2>
+                    card title
+                </h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
+                </p>
+                <button class="expand">
+                    Expand...
+                </button>
+            </a>
+        </div>
+        <div class="card">
+            <a href="https://codingfantasy.com/games/flexboxadventure/play">
+                <img src="post.svg" alt="ilustração" class="image1">
+                <h2>
+                    card title
+                </h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
+                </p>
+                <button class="expand">
+                    Expand...
+                </button>
+            </a>
+        </div>
     </section>
 </body>
 </html> 
