--- a/home.html
+++ b/home.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
+    <script src="project.js"></script>
 </head>
 <body>
-    <header class="head">
-        <img src="logo.svg" alt="Logo">
-        <h1>
-            Blog
-        </h1>
-    </header>
+        <header class="logo">
+            <img src="logo.svg" alt="Logo">
+            <h1>
+                Blog
+            </h1>
+        </header>
     <section class="title">
         <h1>
             User Posts
@@ -23,9 +24,9 @@
         <div class="card">
             <a href="https://codingfantasy.com/games/flexboxadventure/play">
                 <img src="post.svg" alt="ilustração" class="image1">
-                <h2>
+                <h1>
                     card title
-                </h2>
+                </h1>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
                 </p>
@@ -37,9 +38,9 @@
         <div class="card">
             <a href="https://codingfantasy.com/games/flexboxadventure/play">
                 <img src="post.svg" alt="ilustração" class="image1">
-                <h2>
+                <h1>
                     card title
-                </h2>
+                </h1>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
                 </p>
@@ -51,9 +52,9 @@
         <div class="card">
             <a href="https://codingfantasy.com/games/flexboxadventure/play">
                 <img src="post.svg" alt="ilustração" class="image1">
-                <h2>
+                <h1>
                     card title
-                </h2>
+                </h1>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
                 </p>
@@ -81,9 +82,9 @@
         <div class="card">
             <a href="https://codingfantasy.com/games/flexboxadventure/play">
                 <img src="post.svg" alt="ilustração" class="image1">
-                <h2>
+                <h1>
                     card title
-                </h2>
+                </h1>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
                 </p>
@@ -95,9 +96,9 @@
         <div class="card">
             <a href="https://codingfantasy.com/games/flexboxadventure/play">
                 <img src="post.svg" alt="ilustração" class="image1">
-                <h2>
+                <h1>
                     card title
-                </h2>
+                </h1>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
                 </p>
