Adding the page for each card and a button to go back

--- a/home.html
+++ b/home.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Blog</title>
     <link rel="stylesheet" href="style.css">
-    <script src="project.js"></script>
+    <link rel="icon" type="image/svg" href="./images/logo.svg">
 </head>
 <body>
         <header class="logo">
-            <img src="logo.svg" alt="Logo">
+            <img src="images/logo.svg" alt="Logo">
             <h1>
                 Blog
             </h1>
@@ -22,10 +22,10 @@
     </section>
     <section class="cards">
         <div class="card">
-            <a href="https://codingfantasy.com/games/flexboxadventure/play">
-                <img src="post.svg" alt="ilustração" class="image1">
+            <a href="./open_card_carneiros.html">
+                <img src="images/beachHouse1.jpeg" alt="" id="image1">
                 <h1>
-                    card title
+                    Carneiros
                 </h1>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
@@ -36,10 +36,10 @@
             </a>
         </div>
         <div class="card">
-            <a href="https://codingfantasy.com/games/flexboxadventure/play">
-                <img src="post.svg" alt="ilustração" class="image1">
+            <a href="./open_card_pina.html">
+                <img src="images/beachHouse2.jpg" alt="" id="image2">
                 <h1>
-                    card title
+                    Pina
                 </h1>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
@@ -50,10 +50,10 @@
             </a>
         </div>
         <div class="card">
-            <a href="https://codingfantasy.com/games/flexboxadventure/play">
-                <img src="post.svg" alt="ilustração" class="image1">
+            <a href="./open_card_paiva.html">
+                <img src="images/beachHouse3.jpg" alt="" id="image3">
                 <h1>
-                    card title
+                    Paiva
                 </h1>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
@@ -66,10 +66,10 @@
     </section>
     <section class="cards">
         <div class="card">
-            <a href="https://codingfantasy.com/games/flexboxadventure/play">
-                <img src="post.svg" alt="ilustração" class="image1">
+            <a href="./open_card_BV.html">
+                <img src="images/beachHouse4.jpeg" alt="" id="image4">
                 <h1>
-                    card title
+                    Boa Viagem
                 </h1>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
@@ -80,10 +80,10 @@
             </a>
         </div>
         <div class="card">
-            <a href="https://codingfantasy.com/games/flexboxadventure/play">
-                <img src="post.svg" alt="ilustração" class="image1">
+            <a href="./open_card_tamandare.html">
+                <img src="images/beachHouse5.jpg" alt="" id="image5">
                 <h1>
-                    card title
+                    Tamandaré
                 </h1>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
@@ -94,10 +94,10 @@
             </a>
         </div>
         <div class="card">
-            <a href="https://codingfantasy.com/games/flexboxadventure/play">
-                <img src="post.svg" alt="ilustração" class="image1">
+            <a href="./open_card_porto.html">
+                <img src="images/beachHouse6.jpg" alt="" id="image6">
                 <h1>
-                    card title
+                    Porto de Galinhas
                 </h1>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
