--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Posts</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/svg" href="./images/logo.svg">
 </head>
@@ -20,15 +20,15 @@
             <hr class="horizontal-line">
         </h1>
     </section>
-    <section class="cards">
+    <section class="cards" id="cardsContainer">
         <div class="card">
-            <a href="./open_card_carneiros.html">
-                <img src="images/beachHouse1.jpeg" alt="" id="image1">
+            <a href="./open_card.html?id=1">                
+                <img src="images/beachHouse1.jpeg" alt="" >
                 <h1>
                     Carneiros
                 </h1>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
+                    With a sea view, Bangalo Praia dos Carneiros offers accommodations with an outdoor pool... Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi porro dolores odit ullam quibusdam tempore nisi repudiandae temporibus, sunt veniam. Quibusdam placeat dignissimos tempore ipsam saepe natus exercitationem vero aliquid.               
                 </p>
                 <button class="expand">
                     Expand...
@@ -36,8 +36,8 @@
             </a>
         </div>
         <div class="card">
-            <a href="./open_card_pina.html">
-                <img src="images/beachHouse2.jpg" alt="" id="image2">
+            <a href="./open_card.html?id=2">
+                <img src="images/beachHouse2.jpg" alt="" >
                 <h1>
                     Pina
                 </h1>
@@ -50,29 +50,30 @@
             </a>
         </div>
         <div class="card">
-            <a href="./open_card_paiva.html">
-                <img src="images/beachHouse3.jpg" alt="" id="image3">
+            <a href="./open_card.html?id=3">
+                <img src="images/beachHouse3.jpg" alt="" >
                 <h1>
                     Paiva
                 </h1>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
+                    Located 8.5 km from Guararapes Shopping Mall, Flat Bugen- Paiva Home Stay offers accommodations in Recife with access to... 
                 </p>
+
                 <button class="expand">
                     Expand...
                 </button>
             </a>
         </div>
     </section>
-    <section class="cards">
+    <section class="cards" id="cardsContainer">
         <div class="card">
-            <a href="./open_card_BV.html">
-                <img src="images/beachHouse4.jpeg" alt="" id="image4">
+            <a href="./open_card.html?id=4">
+                <img src="images/beachHouse4.jpeg" alt="" >
                 <h1>
                     Boa Viagem
                 </h1>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
+                    Conveniently located in the best place of Boa Viagem, Toca do Coelho offers air-conditioned rooms, an outdoor pool, free Wi-Fi, and a garden... 
                 </p>
                 <button class="expand">
                     Expand...
@@ -80,8 +81,8 @@
             </a>
         </div>
         <div class="card">
-            <a href="./open_card_tamandare.html">
-                <img src="images/beachHouse5.jpg" alt="" id="image5">
+            <a href="./open_card.html?id=5">
+                <img src="images/beachHouse5.jpg" alt="" >
                 <h1>
                     Tamandaré
                 </h1>
@@ -94,13 +95,13 @@
             </a>
         </div>
         <div class="card">
-            <a href="./open_card_porto.html">
-                <img src="images/beachHouse6.jpg" alt="" id="image6">
+            <a href="./open_card.html?id=6">
+                <img src="images/beachHouse6.jpg" alt="" >
                 <h1>
                     Porto de Galinhas
                 </h1>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
+                    Located in Porto de Galinhas, less than 1 km from Merepe Beach, Recanto do Aconchego offers...                
                 </p>
                 <button class="expand">
                     Expand...
