Adding the comments

--- a/open_card.html
+++ b/open_card.html
@@ -24,6 +24,17 @@
             <p id="card-body"></p>
         </div>
     </section>
+    <section class="comments">
+        <div id="commentsContainer">
+            <div>
+                <p class="userComment">
+                    <span>usuário_1:</span><span>usuário_1@email.com:</span> Lorem Ipsum is simply dummy text of the
+                printing and typesetting industry 
+                </p>
+            </div>
+            <hr class="separatorLine">
+        </div>
+    </section>
   <script src="index.js"></script>
 </body>
 </html>
