finishing the comments and improving some things

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <header class="logo">
             <img src="images/logo.svg" alt="Logo">
             <h1>
-                Blog
+                BLOG
             </h1>
         </header>
     <section class="title">
         <h1>
-            User Posts
+            User posts
             <hr class="horizontal-line">
         </h1>
     </section>
@@ -28,7 +28,7 @@
                     Carneiros
                 </h1>
                 <p>
-                    With a sea view, Bangalo Praia dos Carneiros offers accommodations with an outdoor pool... Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi porro dolores odit ullam quibusdam tempore nisi repudiandae temporibus, sunt veniam. Quibusdam placeat dignissimos tempore ipsam saepe natus exercitationem vero aliquid.               
+                    With a sea view, Bangalo Praia dos Carneiros offers accommodations with an outdoor pool, garden, and restaurant, just a few steps from Praia do Carneiro. This beachfront property provides access to a terrace, ping-pong, free private parking, and complimentary WiFi.
                 </p>
                 <button class="expand">
                     Expand...
@@ -39,10 +39,10 @@
             <a href="./open_card.html?id=2">
                 <img src="images/beachHouse2.jpg" alt="" >
                 <h1>
-                    Pina
+                    Pipa
                 </h1>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
+                    Surfcamp Arara offers practical beach accommodations 350 meters from Praia do Centro and 300 meters from the center of Pipa. The property features a barbecue area and an outdoor swimming pool. WiFi is free. This is the part of Pipa that our guests like the most, according to independent reviews.
                 </p>
                 <button class="expand">
                     Expand...
@@ -56,9 +56,8 @@
                     Paiva
                 </h1>
                 <p>
-                    Located 8.5 km from Guararapes Shopping Mall, Flat Bugen- Paiva Home Stay offers accommodations in Recife with access to... 
+                    Located 8.5 km from Guararapes Shopping Mall, Flat Bugen- Paiva Home Stay offers accommodations in Recife with access to a sauna. Situated 2 km from Candeias Beach, the property provides a terrace and free private parking.
                 </p>
-
                 <button class="expand">
                     Expand...
                 </button>
@@ -73,7 +72,7 @@
                     Boa Viagem
                 </h1>
                 <p>
-                    Conveniently located in the best place of Boa Viagem, Toca do Coelho offers air-conditioned rooms, an outdoor pool, free Wi-Fi, and a garden... 
+                    Featuring an outdoor pool and a 24-hour front desk, the Flat in Boa Viagem is ideally located in the Boa Viagem neighborhood of Recife, 300 meters from Boa Viagem Beach and 2.5 km from Piedade Beach. This apartment offers free private parking, room service, and complimentary WiFi.
                 </p>
                 <button class="expand">
                     Expand...
@@ -87,7 +86,7 @@
                     Tamandaré
                 </h1>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse libero nam quisquam unde. Fuga rerum fugiat harum laboriosam, quaerat labore ipsam architecto, quisquam porro blanditiis dignissimos eveniet pariatur suscipit tempore!
+                    Jardim dos Cajueiros features a balcony and is located in Tamandaré, just 400 meters from Carneiro Beach and 50 meters from Tamandaré Beach. This air-conditioned accommodation is 300 meters from Campas Beach, and you can enjoy free private parking on-site and complimentary WiFi.
                 </p>
                 <button class="expand">
                     Expand...
@@ -101,8 +100,7 @@
                     Porto de Galinhas
                 </h1>
                 <p>
-                    Located in Porto de Galinhas, less than 1 km from Merepe Beach, Recanto do Aconchego offers...                
-                </p>
+                    Conveniently located in the center of Porto de Galinhas, Toca do Coelho offers air-conditioned rooms, an outdoor pool, free WiFi, and a garden. Situated 500 meters from Porto de Galinhas Beach and 700 meters from Merepe Beach, the property features a terrace and a bar. This non-smoking property is 1.6 km from Cupe Beach.                </p>
                 <button class="expand">
                     Expand...
                 </button>
