--- a/open_card.html
+++ b/open_card.html
@@ -11,7 +11,7 @@
     <header class="logo">
         <img src="images/logo.svg" alt="Logo">
         <h1>
-            Blog
+            BLOG
         </h1>
     </header>
         <button onclick="goBack()" class="goBack" id="backButton">
@@ -25,15 +25,10 @@
         </div>
     </section>
     <section class="comments">
-        <div id="commentsContainer">
-            <div>
-                <p class="userComment">
-                    <span>usuário_1:</span><span>usuário_1@email.com:</span> Lorem Ipsum is simply dummy text of the
-                printing and typesetting industry 
-                </p>
-            </div>
-            <hr class="separatorLine">
-        </div>
+        <label class="userComment">
+                <span id="email"></span>
+                <p id="comment"></p>
+        </label>
     </section>
   <script src="index.js"></script>
 </body>
